--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # Dependency directories
 node_modules/
 
-# TypeScript cache
-*.tsbuildinfo
-
 # Optional npm cache directory
 .npm
 
@@ -12,16 +9,9 @@ node_modules/
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
 
-# distributed code
-dist/
-
-# DynamoDB Local files
-.dynamodb/
+# lamda zip files
+*.zip
 
 # Apple search
 .DS_Store
