--- a/src/package.json
+++ b/src/package.json
@@ -27,13 +27,6 @@
     "url": "https://github.com/hellocoop/packages/issues"
   },
   "scripts": {
-    "build": "echo 'Build script not implemented'",
-    "zip": "cd src && zip -q -r function.zip . -i '*.js' -i '*.mjs' -i '*.json'",
-    "deploy": "npm run zip && aws lambda update-function-code --function-name HelloCoop --zip-file fileb://src/function.zip --publish",
-    "get-url": "aws lambda get-function-url-config --function-name HelloCoop",
-    "tail": "aws logs tail /aws/lambda/HelloCoop --follow",
-    "test": "echo 'Error: no test specified' && exit 1",
-    "install" : "cd src && npm install"
   },
   "devDependencies": {
   },
@@ -41,5 +34,6 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@hellocoop/router": "*"
   }
 }
